<resources>
    <string name="app_name">Tip Collector</string>
    <string name="analysis">Analysis</string>
    <string name="timeline">Timeline</string>
    <string name="main_page">Main page</string>
    <string name="sort">Sort</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cash">Cash</string>
    <string name="choose_date">Choose date</string>
    <string name="card">Card</string>
    <string name="sum">Sum</string>
    <string name="hours">hours</string>
    <string name="ok" translatable="false">Ok</string>

    <string name="total">TOTAL:</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="average_in_chosen_days">Average in chosen days</string>
    <string name="average">AVERAGE</string>
    <string name="select_currency">Select Currency</string>
    <string name="settings_general_choose_currency">Change your currency</string>
    <string name="your_hourly_rate">Your hourly rate</string>
    <string name="settings_general_hourly_rate">Please choose your hourly rate</string>
    <string name="select_language">Select language</string>
    <string name="language_default_value" translatable="false">English</string>
    <string name="settings_interface_language" translatable="false">Language</string>
    <string name="clear_all_database">Clear ALL data</string>
    <string name="clear_all_data_message">"This will clear your data "</string>
    <string name="setting_general">GENERAL</string>
    <string name="settings_interface">INTERFACE</string>
    <string name="data_settings">Data settings</string>
    <string name="monday">Monday</string>
    <string name="hours_value">Hours value</string>
    <string name="add_day">ADD DAY</string>
    <string name="all_records">All records</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all">All records</string>
    <string name="curView" translatable="false">curView</string>
    <string name="notification" >Notifications</string>
    <string name="total_this_month">Total this month:</string>
    <string name="average_in_chosen_month">Average in chosen month</string>


    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
        <item>Russian</item>
    </string-array>

    <string-array name="currencies">
        <item>PLN</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>UAH</item>
    </string-array>
</resources>
